docker compose updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     image: zaproxy/zap-stable
     container_name: zap
     command:
-#    "zap.sh", "-daemon", "-host", "0.0.0.0", "-port", "8090", "-config api.disablekey=true", "-config 'api.addrs.addr.name=.*'", "-config 'api.addrs.addr.regex=true'"]
       - zap.sh
       - -daemon
       - -host
@@ -21,8 +20,7 @@ services:
     environment:
       ZAP_API_KEY: ""
     volumes:
-      - /Users/xxx/Downloads:/zap/wrk
-
+      - //YOUR_LOCAL_CUSTOM_FOLDER:/zap/wrk
 
   open-webui:
     image: ghcr.io/open-webui/open-webui
@@ -31,19 +29,17 @@ services:
     volumes:
       - open-webui:/app/backend/data
 
-volumes:
-    open-webui:
+  mcp-server:
+    image: mcp-zap-server:latest
+    depends_on:
+      - zap
+    ports:
+      - "7456:7456"   # HTTP transport (SSE) endpoint
+    environment:
+      ZAP_API_URL: zap
+      ZAP_API_PORT: 8090
+    volumes:
+      - /YOUR_LOCAL_CUSTOM_FOLDER:/tmp
 
-#  mcp-server:
-##    build: ./server
-##    container_name: mcp-zap-server
-#    image: mcp-zap-server:latest
-#    depends_on:
-#      - zap
-#    ports:
-#      - "7456:7456"   # HTTP transport (SSE) endpoint
-#    environment:
-#      ZAP_API_URL: zap
-#      ZAP_API_PORT: 8090
-#    volumes:
-#      - reports-volume:/tmp
+volumes:
+  open-webui:
