--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - "@modelcontextprotocol/server-filesystem"
       - "${LOCAL_ZAP_WORKPLACE_FOLDER}"         # Allowed directory inside the container
     volumes:
-      - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}:ro  # Mount your host folder read-only
+      - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}
 
   mcp-server:
     image: mcp-zap-server:latest
