--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -37,6 +37,20 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+
+    - name: Build and push customer-simulator image to registry
+      uses: docker/build-push-action@v4
+      with:
+        file: Dockerfile
+        push: true
+        tags: ${{ env.DOCKER_REGISTRY }}/zap-mcp-server:${{ steps.build-tag.outputs.build_number }}
+
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
 #    - name: Publish to GitHub Packages
