--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -32,6 +32,10 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Get short SHA from long commit SHA for image tagging
+      id: build-tag
+      run: echo "build_number=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_OUTPUT"
+
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v1
       with:
