--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -46,6 +46,7 @@ jobs:
     - name: Build and push mcp-zap-server image to registry
       uses: docker/build-push-action@v4
       with:
+        context: .
         file: Dockerfile
         push: true
         tags: ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
