--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}
 
   mcp-server:
-    image: mcp-zap-server:latest
+    image: ghcr.io/dtkmn/mcp-zap-server:caeef1a
     restart: always
     depends_on:
       - zap
