--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,10 @@ services:
       - open-webui
       - mcp-server
     ports:
-      - "8000:8000"
+      - "9090:9090"
     command:
       - --port
-      - "8000"
+      - "9090"
       - --server-type
       - "sse"
       - --
@@ -62,7 +62,8 @@ services:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}
 
   mcp-server:
-    image: ghcr.io/dtkmn/mcp-zap-server:caeef1a
+#    image: ghcr.io/dtkmn/mcp-zap-server:caeef1a
+    image: mcp-zap-server:latest
     restart: always
     depends_on:
       - zap
