--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,13 @@ services:
       - "8090:8090"
     environment:
       ZAP_API_KEY: ""
+      ZAP_MEMORY: "4G"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8090/JSON/core/view/version/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     volumes:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:/zap/wrk
 
@@ -26,14 +33,20 @@ services:
     image: ghcr.io/open-webui/open-webui
     ports:
       - "3000:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     volumes:
       - open-webui:/app/backend/data
 
   mcpo:
     image: ghcr.io/open-webui/mcpo:main
-    depends_on:
-      - open-webui
-      - mcp-server
+#    depends_on:
+#      mcp-server:
+#        condition: service_healthy
     ports:
       - "9090:9090"
     command:
@@ -47,7 +60,8 @@ services:
   mcpo-filesystem:
     image: ghcr.io/open-webui/mcpo:main
     depends_on:
-      - open-webui
+      open-webui:
+        condition: service_healthy
     ports:
       - "8001:8001"        # Expose the HTTP OpenAPI endpoint
     command:
@@ -66,12 +80,19 @@ services:
     image: mcp-zap-server:latest
     restart: always
     depends_on:
-      - zap
+      zap:
+        condition: service_healthy
     ports:
       - "7456:7456"   # HTTP transport (SSE) endpoint
     environment:
       ZAP_API_URL: zap
       ZAP_API_PORT: 8090
+    healthcheck:
+      test: [ "CMD-SHELL", "curl", "-sf", "http://localhost:7456/actuator/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     volumes:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:/zap/wrk
 
