--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webflux'
+    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.zaproxy:zap-clientapi:1.16.0'
     implementation 'io.swagger.parser.v3:swagger-parser:2.0.31'
     implementation 'io.apicurio:apicurio-data-models:2.2.2'
