--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,9 @@ services:
 
   mcpo:
     image: ghcr.io/open-webui/mcpo:main
-#    depends_on:
-#      mcp-server:
-#        condition: service_healthy
+    depends_on:
+      mcp-server:
+        condition: service_healthy
     ports:
       - "9090:9090"
     command:
@@ -76,8 +76,7 @@ services:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}
 
   mcp-server:
-#    image: ghcr.io/dtkmn/mcp-zap-server:caeef1a
-    image: mcp-zap-server:latest
+    image: ghcr.io/dtkmn/mcp-zap-server:3851067
     restart: always
     depends_on:
       zap:
@@ -88,7 +87,7 @@ services:
       ZAP_API_URL: zap
       ZAP_API_PORT: 8090
     healthcheck:
-      test: [ "CMD-SHELL", "curl", "-sf", "http://localhost:7456/actuator/health" ]
+      test: [ "CMD-SHELL", "nc -zv localhost 7456"]
       interval: 10s
       timeout: 5s
       retries: 3
