--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Building zap-mcp-server image
+name: For build/test/docker on all branches
 env:
   DOCKER_REGISTRY: ghcr.io/${{ github.repository_owner }}
   IMAGE_NAME: mcp-zap-server
