--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build with Gradle
-      run: ./gradlew build --scan -x test
+      run: ./gradlew build --scan
 
     - name: Get short SHA from long commit SHA for image tagging
       id: build-tag
