--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build with Gradle
-        run: ./gradlew build --scan -x test
+        run: ./gradlew build --scan
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
