--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,9 @@ services:
       - ${LOCAL_ZAP_WORKPLACE_FOLDER}:${LOCAL_ZAP_WORKPLACE_FOLDER}
 
   mcp-server:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: ghcr.io/dtkmn/mcp-zap-server:v0.1.0
     restart: always
     depends_on:
