update CI configuration to include --no-daemon, --stacktrace, and --info flags in Gradle build commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build with Gradle
-      run: ./gradlew build --scan
+      run: ./gradlew build --scan --no-daemon --stacktrace --info
 
     - name: Get short SHA from long commit SHA for image tagging
       id: build-tag
