--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ env:
   DOCKER_REGISTRY: ghcr.io/${{ github.repository_owner }}
   IMAGE_NAME: mcp-zap-server
 on:
+  pull_request:
+    types: [ opened, reopened, synchronize, edited ]
+    branches: [ "main" ]
   push:
     branches: [ "**" ]
 
