--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       run: echo "build_number=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_OUTPUT"
 
     - name: Log in to GitHub Container Registry
+      if: github.actor != 'dependabot[bot]'
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
@@ -45,6 +46,7 @@ jobs:
         password: ${{ secrets.GHCR_PAT }}
 
     - name: Build and push mcp-zap-server image to registry
+      if: github.actor != 'dependabot[bot]'
       uses: docker/build-push-action@v4
       with:
         context: .
