update Docker image tag to latest in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: ghcr.io/dtkmn/mcp-zap-server:v0.2.0-SNAPSHOT
+    image: mcp-zap-server:latest
     restart: always
     depends_on:
       zap:
