--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,20 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+    }
 }
 
 ext {
-    set('springAiVersion', "1.0.1")
+    set('springAiVersion', "1.1.0-SNAPSHOT")
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.zaproxy:zap-clientapi:1.16.0'
