--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     types: [ opened, reopened, synchronize, edited ]
     branches: [ "main" ]
   push:
-    branches: [ "**" ]
+    branches:
 
 jobs:
   build:
@@ -39,7 +39,7 @@ jobs:
 
     - name: Log in to GitHub Container Registry
       if: github.actor != 'dependabot[bot]'
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -47,10 +47,11 @@ jobs:
 
     - name: Build and push mcp-zap-server image to registry
       if: github.actor != 'dependabot[bot]'
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v6
       with:
         context: .
         file: Dockerfile
         push: true
+        platforms: linux/amd64, linux/arm64
         tags: ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
 
