add Docker Buildx setup to CI and release workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
         id: vars
         run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push mcp-zap-server image to registry
         uses: docker/build-push-action@v6
         with:
