--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,12 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GHCR_PAT }}
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ github.actor }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -56,5 +62,6 @@ jobs:
         file: Dockerfile
         push: true
         platforms: linux/amd64, linux/arm64
-        tags: ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
-
+        tags: |
+          ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
+          ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
