--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,4 +50,4 @@ jobs:
           platforms: linux/amd64, linux/arm64
           tags: |
             ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
-            ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
+            ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
