--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
         password: ${{ secrets.GHCR_PAT }}
 
     - name: Login to Docker Hub
+      if: github.actor != 'dependabot[bot]'
       uses: docker/login-action@v3
       with:
         username: ${{ github.actor }}
