--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,21 @@
 title: MCP ZAP Server
 description: Spring AI MCP Server for OWASP ZAP Security Testing
-theme: jekyll-theme-cayman
+
+# Available GitHub Pages themes (uncomment one to try):
+# theme: jekyll-theme-cayman          # Current - Clean, modern (blue header)
+# theme: jekyll-theme-minimal       # Minimalist sidebar layout
+theme: jekyll-theme-slate         # Dark theme with gray tones
+# theme: jekyll-theme-architect     # Green accent, modern
+# theme: jekyll-theme-hacker        # Matrix-style green on black
+# theme: jekyll-theme-midnight      # Dark blue/black theme
+# theme: jekyll-theme-leap-day      # Bright, colorful theme
+# theme: jekyll-theme-time-machine  # Retro newspaper style
+# theme: jekyll-theme-dinky         # Compact sidebar theme
+# theme: jekyll-theme-tactile       # Clean with orange accents
+# theme: jekyll-theme-modernist     # Clean, wide layout
+# theme: jekyll-theme-merlot        # Red accent theme
+# theme: minima                     # Jekyll's default theme
+
 baseurl: "/mcp-zap-server"
 url: "https://dtkmn.github.io"
 
