--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ repositories {
 
 ext {
     set('springAiVersion', "1.1.0")
+    set('jjwtVersion', "0.13.0")
 }
 
 dependencies {
@@ -40,9 +41,9 @@ dependencies {
     implementation 'org.zaproxy:zap-clientapi:1.16.0'
     
     // JWT dependencies
-    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+    implementation 'io.jsonwebtoken:jjwt-api'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -56,6 +57,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+        mavenBom "io.jsonwebtoken:jjwt-bom:${jjwtVersion}"
     }
 }
 
