--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,12 @@ name: For GitHub Releases, builds versioned Docker images
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to build (for tagging purposes)'
+        required: true
+        type: string
 
 jobs:
   docker-release:
@@ -33,7 +39,12 @@ jobs:
 
       - name: Set version and commit
         id: vars
-        run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "version=${{ inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
