--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     types: [ opened, reopened, synchronize, edited ]
     branches: [ "main" ]
   push:
-    branches:
+  workflow_dispatch:
 
 jobs:
   build:
