--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,15 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build --scan --no-daemon --stacktrace --info
 
+      - name: Generate SBOM with CycloneDX
+        run: ./gradlew cyclonedxBom
+
+      - name: Upload SBOM artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bom.json
+          path: build/reports/cyclonedx-direct/bom.json
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
