--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,4 +66,4 @@ jobs:
           push: true
           platforms: linux/amd64, linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/mcp-zap-server:${{ matrix.tag-suffix }}
+            ghcr.io/${{ github.repository_owner }}/mcp-zap-server:${{ steps.vars.outputs.version }}
