--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: For GitHub Releases, builds versioned Docker images
 
+env:
+  IMAGE_NAME: mcp-zap-server
 on:
   release:
     types: [published]
@@ -48,6 +50,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
+      - name: Login to Docker Hub
+        if: github.actor != 'dependabot[bot]'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Set version and commit
         id: vars
         run: |
@@ -68,4 +77,5 @@ jobs:
           push: true
           platforms: linux/amd64, linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/mcp-zap-server:${{ steps.vars.outputs.version }}
+            ghcr.io/${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
+            ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
