--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,4 +71,6 @@ jobs:
         platforms: linux/amd64, linux/arm64
         tags: |
           ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
+          ${{ env.DOCKER_REGISTRY }}/${{env.IMAGE_NAME}}:dev
           ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.build-tag.outputs.build_number }}
+          ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:dev
