--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,4 +78,6 @@ jobs:
           platforms: linux/amd64, linux/arm64
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
+            ghcr.io/${{ github.repository_owner }}/${{env.IMAGE_NAME}}:latest
             ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:${{ steps.vars.outputs.version }}
+            ${{ github.repository_owner }}/${{env.IMAGE_NAME}}:latest
