--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-    implementation 'org.zaproxy:zap-clientapi:1.17.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation('org.zaproxy:zap-clientapi:1.17.0') {
+        exclude group: 'org.jdom', module: 'jdom'
+    }
+    implementation 'org.jdom:jdom2:2.0.6.1'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
